fix issue with overlapping animations

--- a/style/navigation.css
+++ b/style/navigation.css
@@ -6,6 +6,7 @@ header {
     width: 100%;
     display: flex;
     justify-content: center;
+    z-index: 10000;
 }
 
 #header-wrapper {
